# Flight-Monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  flights.yaml.example  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  monitor.yml
launchd/: com.flight-monitor.plist.example
src/flight_monitor/: __init__.py  __main__.py  config.py  monitor.py  scheduler.py
src/flight_monitor/clients/: __init__.py  serpapi.py
src/flight_monitor/notifiers/: __init__.py  base.py  email.py  telegram.py
src/flight_monitor/storage/: __init__.py  sqlite.py
tests/: test_core.py
