[project]
name = "flight-monitor"
version = "1.0.0"
description = "Monitor flight prices and get notified on price drops"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.34.2",
]

[project.scripts]
flight-monitor = "flight_monitor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight_monitor"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.15",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
